--- a/SaleApp/src/main/resources/messages.properties
+++ b/SaleApp/src/main/resources/messages.properties
@@ -3,3 +3,9 @@ product.desc = Mi\u00eau t\u1ea3 s\u1ea3n ph\u1ea9m
 product.price = Gi\u00e1 s\u1ea3n ph\u1ea9m
 product.category = Danh m\u1ee5c
 product.submit = Th\u00eam s\u1ea3n ph\u1ea9m
+product.price.notNullMsg=Ph\u1ea3i c\u00f3 gi\u00e1 s\u1ea3n ph\u1ea9m
+product.price.minMsg=Gi\u00e1 s\u1ea3n ph\u1ea9m t\u1ed1i thi\u1ec3u 100.000 VN\u0110
+product.price.maxMsg=Gi\u00e1 s\u1ea3n ph\u1ea9m t\u1ed1i \u0111a 1 t\u1ef7 VN\u0110
+product.name.sizeMsg=T\u00ean s\u1ea3n ph\u1ea9m t\u1ed1i thi\u1ec3u 10 v\u00e0 t\u1ed1i \u0111a 50 k\u00fd t\u1ef1
+product.category.notNullMsg=Ph\u1ea3i ch\u1ecdn danh m\u1ee5c cho s\u1ea3n ph\u1ea9m
+product.image.notNullMsg=Ph\u1ea3i c\u00f3 \u1ea3nh \u0111\u1ea1i di\u1ec7n s\u1ea3n ph\u1ea9m
